--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,5 +13,18 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+        aws-region: us-east-1
+
+    - name: scale nodes 
+      shell: bash 
+      run: |
+        eksctl scale nodegroup --cluster dr --name management-x86-al2-mng-20231122214931321600000003 --nodes 1
+
     - name: Hello World
       run: echo "Hello, World!"
