--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -21,17 +21,18 @@ jobs:
         aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
         aws-region: us-east-1
 
+#   Terraform plan 
+#   Terraform apply of cluster creation         
+
     - name: Install eksctl
       run: |
         curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp
         sudo mv /tmp/eksctl /usr/local/bin   
-        eksctl scale nodegroup --cluster dr --name management-x86-al2-mng-20231122214931321600000003 --nodes 2
-
-    - name: Wait for Nodes to Scale Up
-      run: |
-        while [[ "$(aws eks describe-nodegroup --cluster your-cluster-name --nodegroup-name new-nodegroup-name --query 'nodegroup.scalingConfig.desiredSize')" != "2" ]]; do
+        eksctl scale nodegroup --cluster dr --name management-x86-al2-mng-20231122214931321600000003 --nodes 1
+        while [[ "$(aws eks describe-nodegroup --cluster dr --nodegroup-name new-nodegroup-name --query 'nodegroup.scalingConfig.desiredSize')" != "1" ]]; do
           sleep 30
         done
 
-    - name: Hello World
-      run: echo "Hello, World!"
+
+#  Install Nifi
+#  Install ECK 
