--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -22,17 +22,39 @@ jobs:
         aws-region: us-east-1
 
 #   Terraform plan 
-#   Terraform apply of cluster creation         
+#   Terraform apply of cluster creation     
+    # - name: Set up Terraform
+    #   uses: hashicorp/setup-terraform@v1
+    #   with:
+    #     terraform_version: 1.0.0
+    #     #cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+
+    # - name: Terraform Init
+    #   run: terraform init
+
+    # - name: Terraform Plan
+    #   run: terraform plan -out=tfplan
+
+    # - name: Terraform Apply
+    #   if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    #   run: terraform apply -auto-approve tfplan    
 
     - name: Install eksctl
       run: |
         curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp
         sudo mv /tmp/eksctl /usr/local/bin   
-        eksctl scale nodegroup --cluster dr --name management-x86-al2-mng-20231122214931321600000003 --nodes 2
-        while [[ "$(aws eks describe-nodegroup --cluster dr --nodegroup-name management-x86-al2-mng-20231122214931321600000003 --query 'nodegroup.scalingConfig.desiredSize')" != "2" ]]; do
+        eksctl scale nodegroup --cluster dr --name management-x86-al2-mng-20231122214931321600000003 --nodes 1
+        while [[ "$(aws eks describe-nodegroup --cluster dr --nodegroup-name management-x86-al2-mng-20231122214931321600000003 --query 'nodegroup.scalingConfig.desiredSize')" != "1" ]]; do
           sleep 30
         done
 
+    - name: update kubeconfig 
+      run: |
+        aws eks update-kubeconfig --name "dr" --region us-east-1 --role-arn arn:aws:iam::599654392735:role/DREKSRole --alias dr
+
+    - name: check the pods 
+      run: |
+        kubectl get pods -A
 
 #  Install Nifi
 #  Install ECK 
