--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -63,7 +63,10 @@ jobs:
     - name: check the pods 
       run: |
         kubectl get pods -A
+        helm repo add cetic https://cetic.github.io/helm-charts
         helm repo update
+        helm install my-release cetic/nifi --values install_eks_services/values.yaml
+
 
 #  Install Nifi
 #  Install ECK 
