--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,4 +1,4 @@
-name: Hello World
+name: DR Template Run
 
 on:
   push:
@@ -29,8 +29,7 @@ jobs:
         role-session-name: MySessionName
         #role-chaining: true        
 
-#   Terraform plan 
-#   Terraform apply of cluster creation     
+#   Terraform plan and Terraform apply of cluster creation     
     # - name: Set up Terraform
     #   uses: hashicorp/setup-terraform@v1
     #   with:
@@ -47,12 +46,12 @@ jobs:
     #   if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     #   run: terraform apply -auto-approve tfplan    
 
-    - name: Install eksctl
+    - name: Install eksctl - Spin up nodegroup
       run: |
         curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp
         sudo mv /tmp/eksctl /usr/local/bin   
-        eksctl scale nodegroup --cluster dr --name management-x86-al2-mng-20231122214931321600000003 --nodes 1
-        while [[ "$(aws eks describe-nodegroup --cluster dr --nodegroup-name management-x86-al2-mng-20231122214931321600000003 --query 'nodegroup.scalingConfig.desiredSize')" != "1" ]]; do
+        eksctl scale nodegroup --cluster dr --name management-x86-al2-mng-20231122214931321600000003 --nodes 3
+        while [[ "$(aws eks describe-nodegroup --cluster dr --nodegroup-name management-x86-al2-mng-20231122214931321600000003 --query 'nodegroup.scalingConfig.desiredSize')" != "3" ]]; do
           sleep 30
         done
 
@@ -60,13 +59,28 @@ jobs:
       run: |
         aws eks update-kubeconfig --name "dr" --region us-east-1 --role-arn arn:aws:iam::724421275000:role/DREKSRole --alias dr
 
-    - name: check the pods 
+#  Install Nifi
+    - name: Install Nifi
       run: |
         kubectl get pods -A
         helm repo add cetic https://cetic.github.io/helm-charts
         helm repo update
         helm install my-release cetic/nifi --values install_eks_services/values.yaml
 
+    - name: Sleep for 30s
+      uses: juliangruber/sleep-action@v2.0.0
+      with:
+        time: 30s    
 
-#  Install Nifi
 #  Install ECK 
+    - name: Install ECK
+      run: |
+        kubectl get pods -A
+        helm repo add elastic https://helm.elastic.co
+        helm repo update
+        helm install elastic-operator elastic/eck-operator -n elastic-system --create-namespace
+
+    - name: Sleep for 30s
+      uses: juliangruber/sleep-action@v2.0.0
+      with:
+        time: 30s   
