--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -99,6 +99,7 @@ jobs:
       run: |
           curl -X PUT "http://${{ vars.DR_ELASTIC_ELB }}:9200/_slm/policy/daily-snapshots?pretty" -i -k --user "elastic:${{ secrets.ELASTIC_PASSWORD }}" -H 'Content-Type: application/json' -d'
           {
+            "schedule": "",
             "name": "<cyberdatahot-{now/d}>",
             "repository": "cyber_data_repository",
             "config": {
