--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -51,89 +51,199 @@ jobs:
         sudo mv /tmp/eksctl /usr/local/bin   
 
 # Spin down Primary cluster      
-    # - name: Install eksctl - spin down primary cluster
-    #   run: |
-    #     eksctl scale nodegroup --cluster primary --name management-x86-al2-mng-20231219031754451800000003 --nodes 0
-    #     while [[ "$(aws eks describe-nodegroup --cluster dr --nodegroup-name management-x86-al2-mng-20231219031754451800000003 --query 'nodegroup.scalingConfig.desiredSize')" != "3" ]]; do
-    #       sleep 30
-    #     done
+    - name: Install eksctl - spin down primary cluster
+      run: |
+        eksctl scale nodegroup --cluster primary --name management-x86-al2-mng-20231219031754451800000003 --nodes 0
+        while [[ "$(aws eks describe-nodegroup --cluster dr --nodegroup-name management-x86-al2-mng-20231219031754451800000003 --query 'nodegroup.scalingConfig.desiredSize')" != "3" ]]; do
+          sleep 30
+        done
 
-    # - name: Install eksctl - Spin up nodegroup on DR Cluster
-    #   run: |
-    #     eksctl scale nodegroup --cluster demo --name management-x86-al2-mng-20231122214931321600000003 --nodes 3
-    #     while [[ "$(aws eks describe-nodegroup --cluster dr --nodegroup-name management-x86-al2-mng-20231122214931321600000003 --query 'nodegroup.scalingConfig.desiredSize')" != "3" ]]; do
-    #       sleep 30
-    #     done
+    - name: Install eksctl - Spin up nodegroup on DR Cluster
+      run: |
+        eksctl scale nodegroup --cluster demo --name management-x86-al2-mng-20240105212445878400000011 --nodes 3
+        while [[ "$(aws eks describe-nodegroup --cluster dr --nodegroup-name management-x86-al2-mng-20240105212445878400000011 --query 'nodegroup.scalingConfig.desiredSize')" != "3" ]]; do
+          sleep 30
+        done
 
     # - name: update kubeconfig 
     #   run: |
     #     aws eks update-kubeconfig --name "dr" --region us-east-1 --role-arn arn:aws:iam::724421275000:role/DREKSRole --alias dr
 
 # Register s3 snapshot
-    - name: register s3 snapshot
+    - name: register hot snapshot repository
       run: |
-        curl -X PUT "http://${{ vars.DR_ELASTIC_ELB }}:9200/_snapshot/cyber_data_repository?pretty" -H 'Content-Type: application/json' -i -k --user "elastic:${{ secrets.ELASTIC_PASSWORD }}" -d'
+        RETURN_CODE=$(curl -X PUT "http://${{ vars.DR_ELASTIC_ELB }}:9200/_snapshot/cyber_data_repository_hot?pretty" -H 'Content-Type: application/json' -i -k --user "elastic:${{ secrets.ELASTIC_PASSWORD }}" -d'
         { 
           "type": "s3",
           "settings": {
-            "bucket": "cyber-red-blue-snaphot-repo",
+            "bucket": "${{ vars.SNAPSHOT_BUCKET_HOT }}",
             "region": "us-east-1"
           }
-        }'       
+        }')
+        if [ $RETURN_CODE -ne 200 ] && [ $RETURN_CODE -ne 201 ]; then
+          exit 1
+        fi       
 
-# Restore ---
-
-    - name: restore 
-      shell: bash 
+# Register s3 snapshot
+    - name: register partial snapshot repository
       run: |
-        SNAPSHOT_NAME=$(curl -X GET "http://${{ vars.DR_ELASTIC_ELB }}:9200/_cat/snapshots/cyber_data_repository?v" --user "elastic:${{ secrets.ELASTIC_PASSWORD }}" | awk '{print $4, $5, $1}' | sort -n  | tail -n 1 | awk '{print $3}')
-        curl -X POST "http://${{ vars.DR_ELASTIC_ELB }}:9200/_snapshot/cyber_data_repository/${SNAPSHOT_NAME}/_restore" --user "elastic:${{ secrets.ELASTIC_PASSWORD }}" -H 'Content-Type: application/json' -d'
+        RETURN_CODE=$(curl -X PUT "http://${{ vars.DR_ELASTIC_ELB }}:9200/_snapshot/cyber_data_repository_partial?pretty" -H 'Content-Type: application/json' -i -k --user "elastic:${{ secrets.ELASTIC_PASSWORD }}" -d'
+        { 
+          "type": "s3",
+          "settings": {
+            "bucket": "${{ vars.SNAPSHOT_BUCKET_PARTIAL }}",
+            "region": "us-east-1"
+          }
+        }')
+        if [ $RETURN_CODE -ne 200 ] && [ $RETURN_CODE -ne 201 ]; then
+          exit 1
+        fi      
+
+
+# Register s3 snapshot
+    - name: register cold snapshot repository
+      run: |
+        RETURN_CODE=$(curl -X PUT "http://${{ vars.DR_ELASTIC_ELB }}:9200/_snapshot/cyber_data_repository_cold?pretty" -H 'Content-Type: application/json' -i -k --user "elastic:${{ secrets.ELASTIC_PASSWORD }}" -d'
+        { 
+          "type": "s3",
+          "settings": {
+            "bucket": "${{ vars.SNAPSHOT_BUCKET_COLD }}",
+            "region": "us-east-1"
+          }
+        }')
+        if [ $RETURN_CODE -ne 200 ] && [ $RETURN_CODE -ne 201 ]; then
+          exit 1
+        fi    
+
+
+# Apply ILM and Index template 
+    - name: Apply ILM and Index template
+      run: |
+        RETURN_CODE=$(curl -X PUT "http://${{ vars.DR_ELASTIC_ELB }}:9200//_ilm/policy/${{ vars.PRIMARY_ECK_ILM }}" -H 'Content-Type: application/json' -i -k --user "elastic:${{ secrets.ELASTIC_PASSWORD }}" -d'
         {
-              "indices": "*"
-        }
-        '      
-
-# setup Snashot Lifecyle  
-    - name: setup Snashot Lifecyle  
-      shell: bash
-      run: |
-          RETURN_CODE=$(curl -X PUT -w "%{http_code}" "http://${{ vars.DR_ELASTIC_ELB }}:9200/_slm/policy/daily-snapshots?pretty" -i -k --user "elastic:${{ secrets.ELASTIC_PASSWORD }}" -H 'Content-Type: application/json' -d'
-          {
-            "schedule": "0 0 0 * * ?",
-            "name": "<cyberdatahot-{now/d}>",
-            "repository": "cyber_data_repository",
-            "config": {
-              "indices": ["*"],
-              "ignore_unavailable": false,
-              "include_global_state": true 
-            },
-            "retention": {
-              "expire_after": "30d",
-              "min_count": 1,
-              "max_count": 5
+          "policy": {
+            "phases": {
+              "hot": {
+                "min_age": "0ms",
+                "actions": {
+                  "set_priority": {
+                    "priority": 100
+                  },
+                  "rollover": {
+                    "max_age": "2m",
+                    "max_size": "5gb"
+                  }
+                }
+              },
+              "cold": {
+                "min_age": "2m",
+                "actions": {
+                "searchable_snapshot" : {
+                    "snapshot_repository" : "test_data_cold_repository"
+                    },
+                  "set_priority": {
+                    "priority": 50
+                  }
+                }
+              }
             }
-          }'  | tail -1)
-          if [ $RETURN_CODE -ne 200 ] && [ $RETURN_CODE -ne 201 ]; then 
-            exit 1
-          fi
-
+          }
+        }')
+        if [ $RETURN_CODE -ne 200 ] && [ $RETURN_CODE -ne 201 ]; then
+          exit 1
+        fi    
 
 # Create an index template and attach the policy to the template
     - name: Create an index template and attach the policy to the template
       shell: bash
       run: |
-          curl -X PUT "http://${{ vars.DR_ELASTIC_ELB }}:9200/_index_template/testtemplate?pretty" -i -k --user "elastic:${{ secrets.ELASTIC_PASSWORD }}" -H 'Content-Type: application/json' -d'
+          RETURN_CODE=$(curl -X PUT "http://${{ vars.DR_ELASTIC_ELB }}:9200/_index_template/test_data_index_template" -i -k --user "elastic:${{ secrets.ELASTIC_PASSWORD }}" -H 'Content-Type: application/json' -d'
           {
-            "index_patterns": ["cyber_data*"],
+            "index_patterns": ["test_data-*"],
             "template": {
               "settings": {
-                "number_of_shards": 3,
-                "number_of_replicas": 1, 
-                "index.lifecycle.name": "cyber_data_ilm",
-                "index.lifecycle.rollover_alias": "cyber_data"
+                "index": {
+                  "lifecycle": {
+                    "name": "test_data_ilm",
+                    "rollover_alias": "test_data"
+                  },
+                  "routing": {
+                    "allocation": {
+                      "include": {
+                        "_tier_preference": "data_hot"
+                      }
+                    }
+                  },
+                  "number_of_shards": "1",
+                  "number_of_replicas": "0"
+                }
               }
             }
-          }'  
+          }')
+          if [ $RETURN_CODE -ne 200 ] && [ $RETURN_CODE -ne 201 ]; then 
+            exit 1
+          fi          
 
 
+
+# Restore ---
+
+    - name: restore the snapshot in DR Cluster (hot tier)
+      shell: bash 
+      run: |
+        SNAPSHOT_NAME=$(curl -X GET "http://${{ vars.DR_ELASTIC_ELB }}:9200/_cat/snapshots/test_data_hot_repository?v" --user "elastic:${{ secrets.ELASTIC_PASSWORD }}" | awk '{print $4, $5, $1}' | sort -n  | tail -n 1 | awk '{print $3}')
+        RETURN_CODE=$(curl -X POST "http://${{ vars.DR_ELASTIC_ELB }}:9200/_snapshot/test_data_hot_repository/${SNAPSHOT_NAME}/_restore" --user "elastic:${{ secrets.ELASTIC_PASSWORD }}" -H 'Content-Type: application/json' -d'
+        {
+              "indices": "*"
+        }
+        ')
+        if [ $RETURN_CODE -ne 200 ] && [ $RETURN_CODE -ne 201 ]; then       
+          exit 1
+        fi
+
+    - name: restore the snapshot in DR Cluster (cold tier)
+      shell: bash 
+      run: |
+        SNAPSHOT_NAME=$(curl -X GET "http://${{ vars.DR_ELASTIC_ELB }}:9200/_cat/snapshots/test_data_partial_repository?v" --user "elastic:${{ secrets.ELASTIC_PASSWORD }}" | awk '{print $4, $5, $1}' | sort -n  | tail -n 1 | awk '{print $3}')
+        RETURN_CODE=$(curl -X POST "http://${{ vars.DR_ELASTIC_ELB }}:9200/_snapshot/test_data_partial_repository/${SNAPSHOT_NAME}/_restore?wait_for_completion=true" --user "elastic:${{ secrets.ELASTIC_PASSWORD }}" -H 'Content-Type: application/json' -d'
+        {
+              "indices": "*",
+              "wait_"
+        }
+        ')
+        if [ $RETURN_CODE -ne 200 ] && [ $RETURN_CODE -ne 201 ]; then       
+          exit 1
+        fi
+
+    - name: Validate Cluster and get count
+      shell: bash 
+      run: |
+        curl -X GET "http://${{ vars.DR_ELASTIC_ELB }}:9200/test_data/_search" --user "elastic:${{ secrets.ELASTIC_PASSWORD }}" -H 'Content-Type: application/json' 
+
+        curl -X GET "http://${{ vars.DR_ELASTIC_ELB }}:9200/test_data/_count" --user "elastic:${{ secrets.ELASTIC_PASSWORD }}" -H 'Content-Type: application/json'
+
+
+# setup Snashot Lifecyle  
+    # - name: setup Snashot Lifecyle  
+    #   shell: bash
+    #   run: |
+    #       RETURN_CODE=$(curl -X PUT -w "%{http_code}" "http://${{ vars.DR_ELASTIC_ELB }}:9200/_slm/policy/daily-snapshots?pretty" -i -k --user "elastic:${{ secrets.ELASTIC_PASSWORD }}" -H 'Content-Type: application/json' -d'
+    #       {
+    #         "schedule": "0 0 0 * * ?",
+    #         "name": "<cyberdatahot-{now/d}>",
+    #         "repository": "cyber_data_repository",
+    #         "config": {
+    #           "indices": ["*"],
+    #           "ignore_unavailable": false,
+    #           "include_global_state": true 
+    #         },
+    #         "retention": {
+    #           "expire_after": "30d",
+    #           "min_count": 1,
+    #           "max_count": 5
+    #         }
+    #       }'  | tail -1)
+    #       if [ $RETURN_CODE -ne 200 ] && [ $RETURN_CODE -ne 201 ]; then 
+    #         exit 1
+    #       fi 
 
