--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -191,8 +191,8 @@ jobs:
     - name: restore the snapshot in DR Cluster (hot tier)
       shell: bash 
       run: |
-        SNAPSHOT_NAME=$(curl -X GET "http://${{ vars.DR_ELASTIC_ELB }}:9200/_cat/snapshots/test_data_hot_repository?v" --user "elastic:${{ secrets.ELASTIC_PASSWORD }}" | awk '{print $4, $5, $1}' | sort -n  | tail -n 1 | awk '{print $3}')
-        RETURN_CODE=$(curl -X POST "http://${{ vars.DR_ELASTIC_ELB }}:9200/_snapshot/test_data_hot_repository/${SNAPSHOT_NAME}/_restore" --user "elastic:${{ secrets.ELASTIC_PASSWORD }}" -H 'Content-Type: application/json' -d'
+        SNAPSHOT_NAME=$(curl -X GET "http://${{ vars.DR_ELASTIC_ELB }}:9200/_cat/snapshots/cyber_data_repository_hot?v" --user "elastic:${{ secrets.ELASTIC_PASSWORD }}" | awk '{print $4, $5, $1}' | sort -n  | tail -n 1 | awk '{print $3}')
+        RETURN_CODE=$(curl -X POST "http://${{ vars.DR_ELASTIC_ELB }}:9200/_snapshot/cyber_data_repository_hot/${SNAPSHOT_NAME}/_restore" --user "elastic:${{ secrets.ELASTIC_PASSWORD }}" -H 'Content-Type: application/json' -d'
         {
               "indices": "*"
         }
@@ -204,11 +204,10 @@ jobs:
     - name: restore the snapshot in DR Cluster (cold tier)
       shell: bash 
       run: |
-        SNAPSHOT_NAME=$(curl -X GET "http://${{ vars.DR_ELASTIC_ELB }}:9200/_cat/snapshots/test_data_partial_repository?v" --user "elastic:${{ secrets.ELASTIC_PASSWORD }}" | awk '{print $4, $5, $1}' | sort -n  | tail -n 1 | awk '{print $3}')
-        RETURN_CODE=$(curl -X POST "http://${{ vars.DR_ELASTIC_ELB }}:9200/_snapshot/test_data_partial_repository/${SNAPSHOT_NAME}/_restore?wait_for_completion=true" --user "elastic:${{ secrets.ELASTIC_PASSWORD }}" -H 'Content-Type: application/json' -d'
+        SNAPSHOT_NAME=$(curl -X GET "http://${{ vars.DR_ELASTIC_ELB }}:9200/_cat/snapshots/cyber_data_repository_partial?v" --user "elastic:${{ secrets.ELASTIC_PASSWORD }}" | awk '{print $4, $5, $1}' | sort -n  | tail -n 1 | awk '{print $3}')
+        RETURN_CODE=$(curl -X POST "http://${{ vars.DR_ELASTIC_ELB }}:9200/_snapshot/cyber_data_repository_partial/${SNAPSHOT_NAME}/_restore?wait_for_completion=true" --user "elastic:${{ secrets.ELASTIC_PASSWORD }}" -H 'Content-Type: application/json' -d'
         {
-              "indices": "*",
-              "wait_"
+              "indices": "*"
         }
         ')
         if [ $RETURN_CODE -ne 200 ] && [ $RETURN_CODE -ne 201 ]; then       
