--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -119,7 +119,7 @@ jobs:
 # Apply ILM and Index template 
     - name: Apply ILM and Index template
       run: |
-        RETURN_CODE=$(curl -X PUT "http://${{ vars.DR_ELASTIC_ELB }}:9200/_ilm/policy/${{ vars.PRIMARY_ECK_ILM }}" -H 'Content-Type: application/json' -i -k --user "elastic:${{ secrets.ELASTIC_PASSWORD }}" -d'
+        curl -X PUT "http://${{ vars.DR_ELASTIC_ELB }}:9200/_ilm/policy/${{ vars.PRIMARY_ECK_ILM }}" -H 'Content-Type: application/json' -i -k --user "elastic:${{ secrets.ELASTIC_PASSWORD }}" -d'
         {
           "policy": {
             "phases": {
@@ -148,10 +148,7 @@ jobs:
               }
             }
           }
-        }')
-        if [ "$RETURN_CODE" -ne 200 ] && [ "$RETURN_CODE" -ne 201 ]; then
-          exit 1
-        fi    
+        }'
 
 # Create an index template and attach the policy to the template
     - name: Create an index template and attach the policy to the template
